syntax = "proto3";

package tools.teal.pulsar.ui.auth.v1;

import "google/rpc/status.proto";
import "google/protobuf/wrappers.proto";

enum AuthType {
  AUTH_TYPE_UNSPECIFIED = 0;
  AUTH_TYPE_NONE = 1;
  AUTH_TYPE_JWT = 2;
  AUTH_TYPE_OAUTH2 = 3;
}

message JwtConfig {
  string token = 1;
}

message OAuth2Config {
  string issuer_url = 1;
  string private_key = 2;
  google.protobuf.StringValue audience = 5;
  google.protobuf.StringValue scope = 6;
}

message SetAuthConfigRequest {
  oneof auth_config {
    JwtConfig jwt = 1;
    OAuth2Config oauth2 = 2;
  }
}

message SetAuthConfigResponse {
  google.rpc.Status status = 1;
}

service BrokersService {
  rpc SetAuthConfig(SetAuthConfigRequest) returns (SetAuthConfigResponse) {};
}
